fix: Cleanup variables and remove cron job

--- a/roles/git/templates/git.cfg.j2
+++ b/roles/git/templates/git.cfg.j2
@@ -2,7 +2,7 @@
   path = .gitalias
 
 [user]
-        email = {{ user_email | default("work@lokraszewski.com") }}
-        name = {{ user_name | default("Lukasz Okraszewski") }}
+        email = {{ git_email | default("work@lokraszewski.com") }}
+        name = {{ full_name | default("Lukasz Okraszewski") }}
 [core]
         editor = nvim
